Fix horizontal scroll

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -143,8 +143,8 @@ h1 {
   grid-template-columns: repeat(3, 1fr);
   gap: 20px;
   place-items: center;
-  margin: 0 auto;
-  width: 1500px;
+  /* margin: 0 auto;
+  width: 1500px; */
   padding-bottom: 50px;
 }
 
@@ -152,7 +152,7 @@ h1 {
   position: relative;
   text-align: center;
   border-radius: 10px;
-  width: 450px;
+  /* width: 450px; */
   padding: 0 5px;
 }
 
